in top page add left side add button

--- a/gravity/index.html
+++ b/gravity/index.html
@@ -20,10 +20,12 @@
                     <img class="logo" src="img/logo.svg" alt="Gravity">
                 </div>
                 <div class="offset-md-2 col-md-3">
-
+                    <button class="search">
+                        <img src="img/search.svg" alt="Search">
+                    </button>
                 </div>
                 <div class="col-md-3">
-                    <button class="menu">
+                    <button class="menu ml-auto">
                         <img src="img/menu.svg" alt="Menu Gravity">
                     </button>
                 </div>
@@ -33,7 +35,22 @@
     <div class="offer">
         <div class="container">
             <div class="row">
+                <div class="col-md-6">
+                    <div class="offer-cont">
+                        <h1 class="offer-cont__title">
+                            Work around you and your team
+                        </h1>
+                        <p class="offer-cont__text col-md-11">From ads that dance or sing to MTV-like commercials, online
+                            advertisers are now using a new type of technology “rich media” to attract consumers.
+                        </p>
+                        <button class="offer-cont_btn btn">
+                            get started
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-6">
 
+                </div>
             </div>
         </div>
     </div>
