add right col in top page add adaptive for top page

--- a/gravity/index.html
+++ b/gravity/index.html
@@ -35,12 +35,13 @@
     <div class="offer">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 vh-dependent">
                     <div class="offer-cont">
                         <h1 class="offer-cont__title">
                             Work around you and your team
                         </h1>
-                        <p class="offer-cont__text col-md-11">From ads that dance or sing to MTV-like commercials, online
+                        <p class="offer-cont__text col-md-11">From ads that dance or sing to MTV-like commercials,
+                            online
                             advertisers are now using a new type of technology “rich media” to attract consumers.
                         </p>
                         <button class="offer-cont_btn btn">
@@ -48,8 +49,12 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 be-static">
+                    <div class="hero">
+                        <a class="video" href="#">
 
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
