--- a/gravity/index.html
+++ b/gravity/index.html
@@ -8,6 +8,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Gravity</title>
 </head>
@@ -61,6 +63,8 @@
     </div>
 </header>
 
+<!--Second page-->
+
 <section class="problems">
     <div class="container">
         <div class="row">
@@ -95,7 +99,61 @@
     </div>
 </section>
 
-<script src="js/bootstrap.min.js"></script>
+<!--Third page-->
+
+<section class="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="section-title">
+                    <p class="section-title__label">— Services</p>
+                    <h2 class="section-title__heading">
+                        We love work hard and explore new things that’s why we cover lot of things. Check our service
+                        list and view details
+                    </h2>
+                </div>
+            </div>
+            <div class="col-md-5 ml-auto d-flex justify-content-between">
+                <ul class="serv-list serv-list__left">
+                    <li class="serv-list__item">Multimedia</li>
+                    <li class="serv-list__item">Interactive design</li>
+                    <li class="serv-list__item">Packaging</li>
+                    <li class="serv-list__item">Branding</li>
+                </ul>
+                <ul class="serv-list serv-list__right">
+                    <li class="serv-list__item">Creative Strategy</li>
+                    <li class="serv-list__item">UI/UX</li>
+                    <li class="serv-list__item">Coding</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="owl-carousel owl-theme works-carousel">
+                    <div class="item">
+                        <img src="img/img3.jpg" alt="Work">
+                        <span class="owl-carousel__play"></span>
+                    </div>
+                    <div class="item">
+                        <img src="img/img4.jpg" alt="Work">
+                        <span class="owl-carousel__play"></span>
+                    </div>
+                    <div class="item">
+                        <img src="img/img3.jpg" alt="Work">
+                        <span class="owl-carousel__play"></span>
+                    </div>
+                    <div class="item">
+                        <img src="img/img4.jpg" alt="Work">
+                        <span class="owl-carousel__play"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
