--- a/gravity/index.html
+++ b/gravity/index.html
@@ -152,6 +152,77 @@
     </div>
 </section>
 
+<!--Fourth page -->
+
+<section class="result">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 be-static">
+                <div class="collage">
+                    <img src="img/img5.jpg" alt="Work">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="easy">
+                    <h2 class="easy__title">
+                        Well thought with super easy to use </h2>
+                    <p class="easy__text">
+                        As we approached the palace I could see through the great windows of the first floor the
+                        brilliantly illuminated audience chamber of Than Kosis. The immense hall was crowded with nobles
+                        and their women.
+                    </p>
+                    <div class="easy__point easy__point_first">
+                        Ultimate Result
+                    </div>
+                    <div class="easy__point easy__point_second">
+                        Minimal Design
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--fifth page-->
+
+<section class="works">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="section-title">
+                    <p class="section-title__label">— Our works</p>
+                    <h2 class="section-title__heading">
+                        Discover our Work
+                    </h2>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <ul class="work-tabs">
+                    <li class="work-tabs__item active">
+                        <a href="#">All</a>
+                    </li>
+                    <li class="work-tabs__item active">
+                        <a href="#">Branding</a>
+                    </li>
+                    <li class="work-tabs__item active">
+                        <a href="#">Web</a>
+                    </li>
+                    <li class="work-tabs__item active">
+                        <a href="#">Development</a>
+                    </li>
+                    <li class="work-tabs__item active">
+                        <a href="#">Films</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+
+        </div>
+    </div>
+</section>
+
+
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
