--- a/gravity/index.html
+++ b/gravity/index.html
@@ -185,7 +185,7 @@
 
 <!--fifth page-->
 
-<section class="works">
+<section class="works tabs">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -197,31 +197,166 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <ul class="work-tabs">
+                <ul class="work-tabs d-flex justify-content-between tabs__caption">
                     <li class="work-tabs__item active">
                         <a href="#">All</a>
                     </li>
-                    <li class="work-tabs__item active">
+                    <li class="work-tabs__item">
                         <a href="#">Branding</a>
                     </li>
-                    <li class="work-tabs__item active">
+                    <li class="work-tabs__item">
                         <a href="#">Web</a>
                     </li>
-                    <li class="work-tabs__item active">
+                    <li class="work-tabs__item">
                         <a href="#">Development</a>
                     </li>
-                    <li class="work-tabs__item active">
+                    <li class="work-tabs__item">
                         <a href="#">Films</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="row">
+            <div class="col">
 
+                <div class="works-wrap d-flex justify-content-between tabs__content active">
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img7.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img8.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img9.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img10.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img11.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img12.jpg" alt="Work">
+                    </a>
+                </div>
+
+                <div class="works-wrap d-flex justify-content-between tabs__content">
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img12.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img11.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img10.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img9.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img8.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img7.jpg" alt="Work">
+                    </a>
+                </div>
+
+                <div class="works-wrap d-flex justify-content-between tabs__content">
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img10.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img11.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img12.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img7.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img8.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img9.jpg" alt="Work">
+                    </a>
+                </div>
+
+                <div class="works-wrap d-flex justify-content-between tabs__content">
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img9.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img8.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img7.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img12.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img11.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img10.jpg" alt="Work">
+                    </a>
+                </div>
+
+                <div class="works-wrap d-flex justify-content-between tabs__content">
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img8.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img11.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img12.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img7.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img9.jpg" alt="Work">
+                    </a>
+                    <a class="work-wrap__item" href="#">
+                        <img src="img/img10.jpg" alt="Work">
+                    </a>
+                </div>
+
+            </div>
         </div>
     </div>
 </section>
 
+<!--sixth page-->
+
+<section class="testimonials">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="section-title">
+                    <p class="section-title__label">— Testimonials</p>
+                    <h2 class="section-title__heading">
+                        "Professionals in their craft! All products were super great with strong attention to details,
+                        and overall vibe"
+                    </h2>
+                    <div class="contributor">
+                        <h3 class="contributor__title">
+                            Polina Kuzina
+                        </h3>
+                        <p class="contributor__desc">
+                            Manager at Craftwork
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+
+            </div>
+        </div>
+    </div>
+</section>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
