--- a/gravity/index.html
+++ b/gravity/index.html
@@ -333,30 +333,62 @@
 
 <section class="testimonials">
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="section-title">
-                    <p class="section-title__label">— Testimonials</p>
-                    <h2 class="section-title__heading">
-                        "Professionals in their craft! All products were super great with strong attention to details,
-                        and overall vibe"
-                    </h2>
-                    <div class="contributor">
-                        <h3 class="contributor__title">
-                            Polina Kuzina
-                        </h3>
-                        <p class="contributor__desc">
-                            Manager at Craftwork
-                        </p>
+        <div class="owl-carousel contributor-carousel">
+            <!--                one slide-->
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="section-title">
+                        <p class="section-title__label">— Testimonials</p>
+                        <h2 class="section-title__heading">
+                            "Professionals in their craft! All products were super great with strong attention to
+                            details,
+                            and overall vibe"
+                        </h2>
+                        <div class="contributor">
+                            <h3 class="contributor__title">
+                                Polina Kuzina
+                            </h3>
+                            <p class="contributor__desc">
+                                Manager at Craftwork
+                            </p>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-5 ml-auto">
+                    <img src="img/photo.jpg" alt="Polina Kuzina" class="cont-photo img-responsive">
+                </div>
             </div>
-            <div class="col-md-6">
-
+            <!--                one slide-->
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="section-title">
+                        <p class="section-title__label">— Testimonials</p>
+                        <h2 class="section-title__heading">
+                            "Professionals in their craft! All products were super great with strong attention to
+                            details,
+                            and overall vibe"
+                        </h2>
+                        <div class="contributor">
+                            <h3 class="contributor__title">
+                                Polina Kuzina
+                            </h3>
+                            <p class="contributor__desc">
+                                Manager at Craftwork
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-5 ml-auto">
+                    <img src="img/photo.jpg" alt="Polina Kuzina" class="cont-photo img-responsive">
+                </div>
             </div>
         </div>
     </div>
 </section>
+
+<!--seventh page-->
+
+
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
