--- a/gravity/index.html
+++ b/gravity/index.html
@@ -388,6 +388,51 @@
 
 <!--seventh page-->
 
+<section class="clients">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="section-title">
+                    <h2 class="section-title__heading">
+                        Our Clients
+                    </h2>
+                </div>
+            </div>
+            <div class="col-md-5 ml-auto">
+                <div class="section-title">
+                    <p class="section-title__label clients-label">— We worked with</p>
+                    <p class="contributor__desc">
+                        Our favorite brands are our friends! We help them to achieve their goals, they help us to stay
+                        sharp.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="clients-row d-flex justify-content-between">
+                    <a href="#" class="clients-row__item">
+                        <img src="img/xiaomi.svg" alt="Xiaomi">
+                    </a>
+                    <a href="#" class="clients-row__item">
+                        <img src="img/tinder.svg" alt="Tinder">
+                    </a>
+                    <a href="#" class="clients-row__item">
+                        <img src="img/apple.svg" alt="Apple">
+                    </a>
+                    <a href="#" class="clients-row__item">
+                        <img src="img/nike.svg" alt="Nike">
+                    </a>
+                    <a href="#" class="clients-row__item">
+                        <img src="img/amd.svg" alt="AMD">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--eighth page-->
 
 
 <script src="js/jquery-3.4.1.min.js"></script>
