--- a/gravity/index.html
+++ b/gravity/index.html
@@ -434,6 +434,15 @@
 
 <!--eighth page-->
 
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <img class="footer-logo" src="img/logo-footer.svg" alt="Gravity">
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
