--- a/gravity/index.html
+++ b/gravity/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700;900&display=swap" rel="stylesheet">
+
+
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -18,15 +22,15 @@
     <div class="nav">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-4 col-md-4">
                     <img class="logo" src="img/logo.svg" alt="Gravity">
                 </div>
-                <div class="offset-md-2 col-md-3">
+                <div class="col-4 offset-md-2 col-md-3">
                     <button class="search">
                         <img src="img/search.svg" alt="Search">
                     </button>
                 </div>
-                <div class="col-md-3">
+                <div class="col-4 col-md-3">
                     <button class="menu ml-auto">
                         <img src="img/menu.svg" alt="Menu Gravity">
                     </button>
@@ -69,7 +73,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5">
-                <img src="img/img2.jpg" alt="Poster" class="poster">
+                <img src="img/img2.jpg" alt="Poster" class="poster img-fluid">
             </div>
             <div class="col-md-6 ml-auto d-flex align-items-center">
                 <div class="about">
@@ -196,7 +200,7 @@
                     </h2>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-12 col-xl-6">
                 <ul class="work-tabs d-flex justify-content-between tabs__caption">
                     <li class="work-tabs__item active">
                         <a href="#">All</a>
@@ -339,7 +343,7 @@
                 <div class="col-md-6">
                     <div class="section-title">
                         <p class="section-title__label">— Testimonials</p>
-                        <h2 class="section-title__heading">
+                        <h2 class="section-title__heading section-title__heading_review">
                             "Professionals in their craft! All products were super great with strong attention to
                             details,
                             and overall vibe"
@@ -355,7 +359,7 @@
                     </div>
                 </div>
                 <div class="col-md-5 ml-auto">
-                    <img src="img/photo.jpg" alt="Polina Kuzina" class="cont-photo img-responsive">
+                    <img src="img/photo.jpg" alt="Polina Kuzina" class="cont-photo img-fluid">
                 </div>
             </div>
             <!--                one slide-->
@@ -363,7 +367,7 @@
                 <div class="col-md-6">
                     <div class="section-title">
                         <p class="section-title__label">— Testimonials</p>
-                        <h2 class="section-title__heading">
+                        <h2 class="section-title__heading section-title__heading_review">
                             "Professionals in their craft! All products were super great with strong attention to
                             details,
                             and overall vibe"
